--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,17 @@
-== README
+== Blog assignment 
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+How to setup and make the project run
 
-Things you may want to cover:
+* Ruby version - 2.2.0
 
-* Ruby version
+* Rails version - 4.1.12
 
-* System dependencies
+1. Clone the repo
+2. Run rake db:create db:migrate
+3. Run the project - rails server
+4. Sign up with user and email
+5. Add some posts
+6. To check the background worker localy
+ - $whenever --update-crontab --set environment=development (this set up the whenever gem to run on development environment)
+ - $whenever -i (update the worker)
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
